# universal

./: .env  README-zh_CN.md  README.md  docker-compose.yml
back-end-py-mongo/: Dockerfile  init_db.py  pyproject.toml  test.py
backend/: Dockerfile  README.md  manage.py  pyproject.toml  rbac_model.conf  requirements.txt  save_db.py  test.py
backend/app/: app.py  dserver.py  settings.py
backend/app/api/admin/: interface.py  menu.py  role.py  users.py
backend/app/api/admin/dashboard/: monitor.py
backend/app/api/admin/system/: interface.py  menu.py  role.py  users.py
backend/app/api/private/admin/dashboard/: monitor.py
backend/app/api/public/: auth.py  init.py
backend/app/api/root/: info.py
backend/app/commands/: dbenv.py  hashing.py
backend/app/database/: interface.json  menu.json  role.json  users.json
backend/app/models/: admin.py  admin_dtos.py  common.py
backend/app/models/system/: interface.py  user.py
backend/app/static/docs/developer/: 404.html  api-examples.html  index.html  markdown-examples.html
backend/app/static/docs/developer/assets/: api-examples.md.DpO286sv.lean.js  app.DduSSbYh.js  index.md.B7kNM5ny.lean.js  markdown-examples.md.CIQkBLLP.js  markdown-examples.md.CIQkBLLP.lean.js
backend/app/static/docs/developer/assets/chunks/: framework.DyMc37k2.js
backend/app/utils/: api_response.py  casbin_adapter.py  cmn_class.py  custom_adapter.py  custom_response.py  db.py  dbenv.py  dependencies.py  hashing.py  helper.py  i18n.py  menu_node_tree.py  mixin.py
client/: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
front-end/: .env  .eslintrc.cjs  env.d.ts  (+2 more)
(+185 files in other folders)
